# agents-verification

./: .gitignore  README.md  pyproject.toml
agents_byzantine_tolerance/: agent.py  consensus.py  repo_cache.py
analysis/: 01_plot.py  02_plot.py  03_plot.py  06_plot.py
experiments/: 01_compute_ground_truth.py  01_verifiable_consensus.py  02_byzantine_injection.py  03_bug_detection.py  06_cascading.py  _smoke.py  injections.yaml  pipelines.yaml  questions.example.yaml  scalar_consensus.py  snippets.yaml
results/: README.md
results/01_verifiable_consensus/: README.md  smoke.jsonl  smoke.summary.md
results/02_byzantine_injection/: README.md  smoke.jsonl  smoke.summary.md
results/03_bug_detection/: README.md  smoke.jsonl  smoke.summary.md
results/06_cascading/: README.md  smoke.jsonl  smoke.summary.md
results/07_debate/: README.md
specs/: 01-verifiable-consensus.md  02-byzantine-injection.md  03-bug-detection-consensus.md  04-ambiguous-spec-detection.md  05-consensus-gated-actions.md  06-cascading-hallucination.md  07-adversarial-debate.md  08-compute-asymmetric-debate.md  08-debate-plugin.md  09-debate-depth-recursion.md  10-stochastic-system-soundness.md  11-pcp-leaf-spot-check.md  12-prover-estimator-obfuscation.md  13-dqc-scaling.md  README.md
