[project]
name = "agents-byzantine-tolerance"
version = "0.1.0"
description = "Byzantine fault tolerance experiments for multi-agent LLM systems"
requires-python = ">=3.11"
# Agents are spawned as subprocesses (claude -p, codex exec), so no SDK deps.
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]
